feat(absence): añade API y frontend de ausencias
